Fix font CSS on mobile

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,16 +1,16 @@
-@import url("https://fonts.googleapis.com/css?family=Playfair+Display:700");
-@import url("https://cdn.jsdelivr.net/npm/@typopro/web-bebas-neue@3.7.5/TypoPRO-BebasNeue.css");
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:700');
+@import url('https://cdn.jsdelivr.net/npm/@typopro/web-bebas-neue@3.7.5/TypoPRO-BebasNeue.css');
 
 .container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .content-div {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    flex-shrink: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  flex-shrink: 0;
 }
