--- a/src/css/page-common-styles.css
+++ b/src/css/page-common-styles.css
@@ -1,3 +1,4 @@
 .margin {
-    margin-top: 5.4em;
+  margin-top: 5.4em;
+  margin-bottom: 1.4em;
 }
