--- a/src/css/sections/common-styles.css
+++ b/src/css/sections/common-styles.css
@@ -1,26 +1,28 @@
 .header {
-    border-bottom: 0.2em #f8d16c solid;
-    display: inline-block;
-    padding-left: 0.8em;
-    padding-right: 0.8em;
-    padding-bottom: 0.3em;
-    margin-bottom: 1em;
-    margin-top: 2em !important; /*  Added important because Semantic-UI gives margin-top as 0 for header */
+  font-size: 32px;
+  font-family: 'Playfair Display';
+  border-bottom: 0.2em #f8d16c solid;
+  display: inline-block;
+  padding-left: 0.8em;
+  color: #3b3736;
+  padding-right: 0.8em;
+  padding-bottom: 0.3em;
+  margin: 0.5em 0 0.5em 0 !important;
 }
 
 .button {
-    background-color: transparent;
-    text-transform: uppercase;
-    display: inline-block;
-    padding: 0.5em 1em;
-    font-family: "TypoPRO Bebas Neue";
-    font-size: 1.5rem;
-    border: 2px solid #263146;
-    color: #263146;
-    transition: background-color 0.3s;
-    cursor: pointer;
+  background-color: transparent;
+  text-transform: uppercase;
+  display: inline-block;
+  padding: 0.5em 1em;
+  font-family: 'TypoPRO Bebas Neue';
+  font-size: 1.5rem;
+  border: 2px solid #263146;
+  color: #263146;
+  transition: background-color 0.3s;
+  cursor: pointer;
 }
 
 .button:hover {
-    background-color: #f8d16c !important;
+  background-color: #f8d16c !important;
 }
