--- a/src/css/sections/main/main-section-browser.css
+++ b/src/css/sections/main/main-section-browser.css
@@ -1,39 +1,39 @@
 .container {
-    background-image: url("/static/maintainer_site/background.svg");
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+  background-image: url('/static/maintainer_site/background.svg');
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .site-title {
-    font-size: 4.3em;
-    color: #f8d16c;
-    display: inline;
-    font-family: "Playfair Display";
-    line-height: 2;
-    background-image: linear-gradient(
-        to right,
-        rgba(255, 255, 255, 0.2) 0%,
-        rgba(255, 255, 255, 0.2) 80%,
-        rgba(255, 255, 255, 0.2) 80%,
-        transparent 80%,
-        transparent 100%
-    );
+  font-size: 4.3em;
+  color: #f8d16c;
+  display: inline;
+  font-family: 'Playfair Display';
+  line-height: 2;
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.2) 0%,
+    rgba(255, 255, 255, 0.2) 80%,
+    rgba(255, 255, 255, 0.2) 80%,
+    transparent 80%,
+    transparent 100%
+  );
 }
 
 .site-para {
-    color: #ffffff;
-    padding-right: 1.2em;
-    font-size: 20px;
-    line-height: 2;
-    margin-top: 1em;
+  color: #ffffff;
+  padding-right: 1.2em;
+  font-size: 20px;
+  line-height: 2;
+  margin-top: 1em;
 }
 
 .image {
-    float: right;
+  float: right;
 }
