--- a/src/css/sections/project/project-main.css
+++ b/src/css/sections/project/project-main.css
@@ -1,13 +1,7 @@
 .container {
-    background-color: #ffffff;
+  background-color: #ffffff;
 }
 
 .image {
-    margin-bottom: 2em;
-}
-.header {
-    font-size: 32px !important;
-    font-family: "Playfair" !important;
-    color: #3b3736;
-    margin: 0px auto 36px auto;
+  margin-bottom: 2em;
 }
